prusti-tests/tests/verify/fail/unsupported/type_param_array.rs
fn foo<T: Ord> (bar: &mut [T]) {
    let _ = bar[0] == bar[0];   //~ ERROR T type is not supported
}

fn main() {}
